tests/type_errors/flatmap_wrong_return.nos
# expect_error: type mismatch
# flatMap expects (T) -> List[U], not (T) -> Int
# Method calls in lambda returning wrong type should be caught at compile time
main() = [[1, 2], [3]].flatMap(xs => xs.length())
